# e-commerce

./: .env.example  .gitignore  TODO.md  pyproject.toml
app/: main.py
app/api/: __init__.py  auth.py
app/api/routes/: auth.py
app/core/: config.py  dependencies.py  security.py
app/database/: base.py  session.py
app/database/models/: address.py  cart.py  category.py  order.py  product.py  user.py
app/repo/: base.py  base_repo.py  user_repo.py
app/router/: __init__.py  auth.py  depends.py
app/schemas/: __init__.py  address.py  auth.py  cart.py  category.py  order.py  product.py  user.py
app/services/: auth_service.py  user_service.py
migrations/: env.py
migrations/versions/: 3b0af90e3135_initial.py
